--- a/src/css/GridHeaders.css
+++ b/src/css/GridHeaders.css
@@ -1,19 +1,9 @@
-.d2analysis-gridheaders {
+.d2analysis-gridheaders, .d2analysis-gridheaders * {
     border-color: #fff !important;
     background: #fff !important;
+    font-size: 10px !important;
+    text-transform: uppercase !important;
+    color: #777 !important;
+    font-weight: 600 !important;
+    padding-left: 1px !important;
 }
-
-    .d2analysis-gridheaders .x-btn-inner {
-        font-size: 10px !important;
-        text-transform: uppercase !important;
-        color: #555 !important;
-    }
-
-        .d2analysis-gridheaders .x-btn-default-toolbar-small-over .x-btn-inner {
-            color: #333 !important;
-        }
-
-    .d2analysis-gridheaders .x-btn-default-toolbar-small-over {
-        border-color: #fff !important;
-        background: #fff !important;
-    }
