--- a/src/css/style.css
+++ b/src/css/style.css
@@ -779,6 +779,19 @@ table.pivot.fontsize-SMALL td {
 	background: url('../images/map_14.png') no-repeat;
 }
 
+.ns-button-icon-arrowleft {
+	background: url('../images/arrowleft.png') no-repeat;
+}
+.ns-button-icon-arrowleftdouble {
+	background: url('../images/arrowleftdouble.png') no-repeat;
+}
+.ns-button-icon-arrowright {
+	background: url('../images/arrowright.png') no-repeat;
+}
+.ns-button-icon-arrowrightdouble {
+	background: url('../images/arrowrightdouble.png') no-repeat;
+}
+
 .ns-button-organisationunitselection .x-btn-center {
 	width: 18px !important;
 }
