--- a/src/css/style.css
+++ b/src/css/style.css
@@ -792,6 +792,10 @@ table.pivot.fontsize-SMALL td {
 	background: url('../images/arrowrightdouble.png') no-repeat;
 }
 
+.ns-button-icon-search {
+	background: url('../images/search_14.png') 1px 1px no-repeat;
+}
+
 .ns-button-organisationunitselection .x-btn-center {
 	width: 18px !important;
 }
