--- a/src/css/style.css
+++ b/src/css/style.css
@@ -796,6 +796,10 @@ table.pivot.fontsize-SMALL td {
 	background: url('../images/search_14.png') 1px 1px no-repeat;
 }
 
+.ns-button-icon-nodeselectchild {
+	background: url('../images/node-select-child.png') 1px 1px no-repeat;
+}
+
 .ns-button-organisationunitselection .x-btn-center {
 	width: 18px !important;
 }
