--- a/src/css/style.css
+++ b/src/css/style.css
@@ -55,7 +55,7 @@ body,
 .x-grid-cell-inner,
 .x-form-item-label {
     font-size: 11px;
-	font-family: 'Arial','Sans-serif','Roboto','Helvetica','Consolas';
+	font-family: 'Arial','Helvetica Neue','sans-serif';
 }
 
 #init {
