--- a/src/css/style.css
+++ b/src/css/style.css
@@ -55,7 +55,7 @@ body,
 .x-grid-cell-inner,
 .x-form-item-label {
     font-size: 11px;
-	font-family: 'Arial','Helvetica Neue','sans-serif';
+	font-family: 'Arial','Helvetica Neue','sans-serif' !important;
 }
 
 #init {
@@ -393,7 +393,7 @@ table.pivot.fontsize-SMALL td {
 .ns-panel-title-dimension {
 	height: 17px;
 	background-repeat: no-repeat;
-	padding-left: 20px
+	padding-left: 22px
 }
 
 .ns-panel-title-data {
