add comment textare style

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1317,4 +1317,7 @@ table.pivot.displaydensity-COMPACT td.pivot-filter {
 	color:black;
 	font-weight:bold;
 }
-
+.eastPanel .commentArea textarea{
+    margin-bottom:5px;
+    font-size:12px;
+}
