--- a/src/css/style.css
+++ b/src/css/style.css
@@ -53,7 +53,8 @@ body,
 .x-form-item,
 .x-panel-header-text-default,
 .x-grid-cell-inner,
-.x-form-item-label {
+.x-form-item-label,
+.x-form-display-field {
     font-size: 11px;
 	font-family: 'Arial','Helvetica Neue','sans-serif' !important;
 }
@@ -1231,4 +1232,105 @@ table.pivot.displaydensity-COMPACT td.pivot-filter {
 	font-family: monospace, consolas, courier new;
 	padding: 4px;
 	border: 0 none;
+}
+
+
+/*----------------------------------------------------------------------------
+ * East Panel
+ *--------------------------------------------------------------------------*/
+
+.x-tip {
+    width: auto !important;
+    background-color: grey !important;
+    border: 0px;
+}
+.x-tip-body {
+    width: auto !important;
+    background-color: grey !important;
+    border: 0px;
+}
+.x-tip-body span {
+    width: auto !important;
+    background-color: grey !important;
+    border: 0px;
+}
+
+.eastPanel .clickable,
+.eastPanel .clickable div,
+.eastPanel .clickable label{
+	cursor: pointer !important;
+}
+
+.eastPanel .thumbs_up {
+	background-image: url('../images/thumbs_up.png');
+	background-position: 5px 6px;
+	padding: 8px 25px;
+	background-repeat: no-repeat;
+}
+
+.eastPanel .greyBackground,
+.eastPanel .greyBackground div {
+	background-color: #efefef;
+}
+
+.eastPanel .comment {
+	padding: 5px;
+	margin-top: 1px;
+}
+
+
+.eastPanel .eastPanelLink {
+	cursor: pointer;
+	color: #3162C5;
+}
+.eastPanel .eastPanelLink:hover {
+    color: #1c3974;
+}
+
+.eastPanel .bold {
+	font-weight: bold;
+}
+.eastPanel .interpretationActions {
+    line-height: 16px;
+}
+
+.eastPanel .interpretationDetailsField {
+    white-space: nowrap;
+    font-weight: bold;
+    line-height: 18px;
+}
+
+.eastPanel .avatar {
+	height: 30px;
+	width: 30px;
+	border-radius:50%;
+	display:inline-block;
+	background-color:#bdbdbd;
+	text-align:center;
+	line-height:30px;
+	font-size:14px;
+	color:black;
+	font-weight:bold;
+}
+.eastPanel .commentArea textarea{
+    margin-bottom:5px;
+    font-size:12px;
+}
+
+.ns-panel-title-east-default .x-panel-header {
+    background: #e6e6e6;
+    border-top-width: 0;
+    border-left-width: 0;
+    box-shadow: none;
+    -webkit-box-shadow: none;
+    padding-top: 8px;
+    padding-bottom: 7px;
+    padding-left: 7px;
+}
+.ns-panel-title-east-default.first .x-panel-header {
+    border-top-width: 1px;
+}
+
+.ns-panel-title-east-default .x-panel-body {
+    border-left: 0;
 }
