adding icon for translate item

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -759,6 +759,10 @@ table.pivot.displaydensity-COMPACT td.pivot-filter {
     background-image:url('../images/fav-delete.png');
 }
 
+.ns-menu-item-favorite-translate{
+	background-image:url('../images/fav-translate.png');
+}
+
 
 /*----------------------------------------------------------------------------
  * Button
