--- a/src/css/style.css
+++ b/src/css/style.css
@@ -54,7 +54,7 @@ body,
 .x-panel-header-text-default,
 .x-grid-cell-inner,
 .x-form-item-label,
-.x-form-display-field {
+.x-form-field {
     font-size: 11px;
 	font-family: 'Arial','Helvetica Neue','sans-serif' !important;
 }
