--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1216,6 +1216,11 @@ table.pivot.displaydensity-COMPACT td.pivot-filter {
 	padding: 4px 0 0;
 }
 
+    /* IE11 title fix */
+.ns-accordion .x-component.x-panel-header-text-container.x-box-item.x-component-default {
+    width: 100% !important;
+}
+
 
 /*----------------------------------------------------------------------------
  * PT Textarea
