--- a/src/css/style.css
+++ b/src/css/style.css
@@ -57,11 +57,12 @@ body,
 .x-form-item-label,
 .x-form-field {
     font-size: 11px;
-	font-family: 'Arial','Helvetica Neue','sans-serif' !important;
+	font-family: 'Helvetica Neue','Helvetica','Arial','sans-serif' !important;
 }
 
-table.pivot {
-	font-family: 'Arial','Helvetica Neue','sans-serif' !important;
+table.pivot,
+table.pivot td {
+	font-family: 'Helvetica Neue','Helvetica','Arial','sans-serif' !important;
 }
 
 #init {
@@ -231,16 +232,31 @@ table.pivot {
 }
 
 table.pivot.displaydensity-COMFORTABLE td {
-	padding: 7px;
+	padding-top: 7px !important;
+	padding-right: 7px;
+	padding-bottom: 7px !important;
+	padding-left: 7px !important;
+}
+table.pivot.displaydensity-NORMAL td {
+	padding-top: 5px !important;
+	padding-right: 5px;
+	padding-bottom: 5px !important;
+	padding-left: 5px !important;
 }
 table.pivot.displaydensity-COMPACT td {
-	padding: 3px;
+	padding-top: 4px !important;
+	padding-right: 4px;
+	padding-bottom: 4px !important;
+	padding-left: 4px !important;
 }
 table.pivot.fontsize-LARGE td {
-	font-size: 13px;
+	font-size: 13px !important;
+}
+table.pivot.fontsize-NORMAL td {
+	font-size: 11px !important;
 }
 table.pivot.fontsize-SMALL td {
-	font-size: 10px;
+	font-size: 10px !important;
 }
 
 .pivot td {
