--- a/src/css/style.css
+++ b/src/css/style.css
@@ -226,26 +226,35 @@ table.pivot {
 	border-collapse: collapse;
 	border-spacing: 0px;
 	border: 0 none;
-
-	-webkit-touch-callout: all;
-	-webkit-user-select: all;
-	-khtml-user-select: all;
-	-moz-user-select: all;
-	-ms-user-select: all;
-	user-select: all;
 }
 
 table.pivot.displaydensity-COMFORTABLE td {
-	padding: 7px !important;
+	padding-top: 7px !important;
+	padding-right: 7px;
+	padding-bottom: 7px !important;
+	padding-left: 7px !important;
 }
+table.pivot.displaydensity-NORMAL td {
+	padding-top: 5px !important;
+	padding-right: 5px;
+	padding-bottom: 5px !important;
+	padding-left: 5px !important;
+}
+
 table.pivot.displaydensity-COMPACT td {
-	padding: 3px !important;
+	padding-top: 4px !important;
+	padding-right: 4px;
+	padding-bottom: 4px !important;
+	padding-left: 4px !important;
 }
 table.pivot.fontsize-LARGE td {
-	font-size: 13px;
+	font-size: 13px !important;
+}
+table.pivot.fontsize-NORMAL td {
+	font-size: 11px !important;
 }
 table.pivot.fontsize-SMALL td {
-	font-size: 10px;
+	font-size: 10px !important;
 }
 
 .pivot td {
