--- a/src/css/style.css
+++ b/src/css/style.css
@@ -638,6 +638,21 @@ table.pivot.displaydensity-COMPACT td.pivot-filter {
     background-color: #f6f6f6;
 }
 
+/*----------------------------------------------------------------------------
+ * Panel Tools
+ *--------------------------------------------------------------------------*/
+
+.x-tool-triple-chevron-left {
+	background-image: url('../images/arrowlefttriple.png') !important;
+}
+
+.x-tool-triple-chevron-right {
+	background-image: url('../images/arrowrighttriple.png') !important;
+}
+
+.tool-triple-chevron-right img {
+	width: 20px !important;
+}
 
 /*----------------------------------------------------------------------------
  * PT Toolbar
