Move user-select rules out of body
This causes problems with the new dashboards-app due to the rules being
applied to the app's body CSS after the plugins are loaded.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -39,15 +39,6 @@
  * General
  *--------------------------------------------------------------------------*/
 
-body {
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-}
-
 body,
 .x-body,
 .x-btn-default-toolbar-small .x-btn-inner,
@@ -739,6 +730,14 @@ table.pivot.displaydensity-COMPACT td.pivot-filter {
 }
 .x-menu-body {
 	padding: 0;
+}
+.x-box-inner {
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 .x-menu-body .x-box-inner {
 	background-color: #fafafa;
