--- a/index.ejs
+++ b/index.ejs
@@ -25,6 +25,8 @@
 <script type="text/javascript" src="extjs/ext-ux/form/MultiSelect.js"></script>
 <script type="text/javascript" src="extjs/ext-overrides/ext-override-loadmask.js"></script>
 
+<%= htmlWebpackPlugin.options.vendorScripts %>
+
 <script src="app.js"></script>
 </body>
 </html>
